# XAiMs

./: README.md
XAiMS_ws/: frames.gv
XAiMS_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
XAiMS_ws/install/XiAMS_V1_description/share/XiAMS_V1_description/: package.bash  package.zsh
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/cmake/: basic_mobile_robotConfig-version.cmake  basic_mobile_robotConfig.cmake
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/config/: ekf.yaml
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/environment/: ament_prefix_path.dsv  path.dsv
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/launch/: basic_mobile_bot_v1.launch.py  basic_mobile_bot_v3.launch.py  ekfnode.launch.py
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/meshes/: arm_base.stl  bicep.stl  elbow.stl  robot_base.stl  wheel.stl  wrist.stl
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/models/: basic_mobile_bot_v1.urdf
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/params/: ekf.yaml
XAiMS_ws/install/basic_mobile_robot/share/basic_mobile_robot/rviz/: urdf_config.rviz
XAiMS_ws/install/bno055/lib/bno055/: bno055
XAiMS_ws/install/bno055/share/bno055/: package.sh  package.xml
XAiMS_ws/install/bno055/share/bno055/config/: bno055_params.yaml  bno055_params_i2c.yaml  bno055_params_test.yaml
XAiMS_ws/install/bno055/share/bno055/launch/: bno055.launch.py
XAiMS_ws/install/imu_bno055/lib/imu_bno055/: bno055_i2c_node
XAiMS_ws/install/imu_bno055/share/imu_bno055/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
XAiMS_ws/install/imu_bno055/share/imu_bno055/cmake/: imu_bno055Config-version.cmake  imu_bno055Config.cmake
XAiMS_ws/install/imu_bno055/share/imu_bno055/environment/: ament_prefix_path.dsv  path.dsv
XAiMS_ws/install/monicar2_cartographer/share/monicar2_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
XAiMS_ws/install/monicar2_cartographer/share/monicar2_cartographer/cmake/: monicar2_cartographerConfig-version.cmake  monicar2_cartographerConfig.cmake
XAiMS_ws/install/monicar2_cartographer/share/monicar2_cartographer/config/: lidar.lua
XAiMS_ws/install/monicar2_cartographer/share/monicar2_cartographer/environment/: ament_prefix_path.dsv  path.dsv
XAiMS_ws/install/monicar2_navigation2/share/monicar2_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
XAiMS_ws/install/two_wheeled_robot/share/two_wheeled_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
XAiMS_ws/install/xaims_bringup/share/xaims_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
XAiMS_ws/install/xaims_description/share/xaims_description/: package.bash  package.zsh
XAiMS_ws/install/xaims_localization/lib/xaims_localization/: ekf_odom_pub  odom_data_saver  pose_estimate_publisher  rviz_click_to_2d
XAiMS_ws/install/xaims_localization/share/xaims_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
XAiMS_ws/install/xiams_V1_description/share/xiams_V1_description/: package.bash  package.zsh
XAiMS_ws/log/: latest_build
XAiMS_ws/src/basic_mobile_robot/: CMakeLists.txt
XAiMS_ws/src/basic_mobile_robot/launch/: ekfnode.launch.py
XAiMS_ws/src/monicar2_navigation2/launch/: navigation2.launch.py
XAiMS_ws/src/monicar2_navigation2/map/: mymap.pgm  mymap.yaml  mymap_backkup.yaml  mymapbackup2.pgm  mymapbackup2.yaml  mymapbackup3.pgm  mymapbackup3.yaml  mymapbackup4.pgm  mymapbackup4.yaml
XAiMS_ws/src/monicar2_navigation2/param/: monicar2.yaml
XAiMS_ws/src/two_wheeled_robot/: CMakeLists.txt
XAiMS_ws/src/two_wheeled_robot/launch/: launch1.py  xaims_rviz.launch.py
XAiMS_ws/src/two_wheeled_robot/meshes/: base_link.stl  base_link2_1.stl  base_link3_1.stl  column_1_1.stl  column_2_1.stl  column_3_1.stl  column_6_1.stl  column_7_1.stl  left_wheel_1.stl  sup_wheel_2_1.stl  sup_wheel_4_1.stl
XAiMS_ws/src/two_wheeled_robot/rviz/: rviz_basic_settings.rviz
XAiMS_ws/src/two_wheeled_robot/urdf/: XiAMS_V1.gazebo  XiAMS_V1.trans  XiAMS_V1.urdf  XiAMS_V1.xacro  materials.xacro
XAiMS_ws/src/xaims_bringup/: CMakeLists.txt
XAiMS_ws/src/xaims_bringup/launch/: xaims_bringup.launch.py
XAiMS_ws/src/xaims_bringup/meshes/: column_4_1.stl  column_5_1.stl  column_8_1.stl  left_motor_1.stl  lidar_link_1.stl  right_motor_1.stl  right_wheel_1.stl  sup_wheel_1_1.stl  sup_wheel_3_1.stl
XAiMS_ws/src/xaims_bringup/urdf/: XiAMS_V1.urdf  XiAMS_V1.xacro
XAiMS_ws/src/xaims_localization/: CMakeLists.txt
XAiMS_ws/src/xaims_localization/data/: odom_data.csv
XAiMS_ws/src/xaims_localization/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
XAiMS_ws/src/xaims_localization/install/xaims_localization/share/xaims_localization/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
XAiMS_ws/src/xaims_localization/install/xaims_localization/share/xaims_localization/cmake/: xaims_localizationConfig.cmake
XAiMS_ws/src/xaims_localization/launch/: launch1.py  launch2.py
XAiMS_ws/src/xaims_localization/log/: latest_build
XAiMS_ws/src/xaims_localization/params/: ekf.yaml  ekf2.yaml  ekf3.yaml
XAiMS_ws/src/xaims_localization/src/: ekf_odom_pub.cpp  odom_data_saver.cpp  pose_estimate_publisher.cpp  rviz_click_to_2d.cpp
ino_files/mobile_robot_odom/: mobile_robot_odom.ino
(+110 files in other folders)
